# takerest

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  components.json  jsconfig.json  package-lock.json  package.json  sample.md  skills-lock.json
.claude/: settings.json  settings.local.json
.github/workflows/: macos_debug.yml  release.yml
.takerest/: README.md
src/: app.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  folder-windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: api.rs  docker.rs  env.rs  files.rs  git.rs  mod.rs  project.rs  terminal.rs  watcher.rs
src-tauri/src/utils/: frontmatter.rs  mod.rs  scanner.rs
src/lib/: updater.ts  utils.js
src/lib/commands/: api.js  docker.js  env.js  files.js  git.js  project.js  terminal.js  watcher.js
src/lib/components/: FileEditor.svelte  FrontmatterEditor.svelte  MarkdownEditor.svelte  TicTacToe.svelte  logo.svelte  themetoggle.svelte
src/lib/components/edra/: editor.css  editor.ts  strings.ts  svelte-renderer.ts  types.ts  utils.ts
src/lib/components/edra/commands/: toolbar-commands.ts  types.ts
src/lib/components/edra/components/: BubbleMenu.svelte
src/lib/components/edra/extensions/: FindAndReplace.ts  HandleFileDrop.ts  InlineMathReplacer.ts
src/lib/components/edra/shadcn/: drag-handle-extended.svelte  editor.svelte  index.ts  style.css  toolbar.svelte
src/lib/components/panels/: ApiPanel.svelte  DockerPanel.svelte  DocsPanel.svelte  EnvPanel.svelte  GitChanges.svelte  GitFileTree.svelte  GitHistory.svelte  GitPanel.svelte  StubPanel.svelte  TerminalPanel.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  (+8 more)
src/lib/components/workspace/: CommitTab.svelte  DiffTab.svelte  DocTab.svelte  DockerLogsTab.svelte  EnvTab.svelte  FileTab.svelte  ImageDiffTab.svelte  ReadmeTab.svelte  TerminalTab.svelte
src/lib/stores/: workspace.svelte.js
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/app/: +layout.svelte  +page.svelte
src/routes/app/api/: +layout.svelte  +page.svelte
src/routes/app/db/: +page.svelte
src/routes/app/docker/: +page.svelte
src/routes/app/env/: +layout.svelte  +page.svelte
src/routes/app/git/: +page.svelte
src/routes/app/kv/: +page.svelte
src/routes/app/s3/: +page.svelte
(+77 files in other folders)
