[package]
name = "anide"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
window-vibrancy = "0.5"
urlencoding = "2"
serde_yaml = "0.9"
ignore = "0.4"
thiserror = "2"
gix = { version = "0.70", features = ["status", "blob-diff", "revision", "index"] }
imara-diff = "0.1"
base64 = "0.22"
notify-debouncer-full = "0.5"
bollard = "0.18"
futures-util = "0.3"
tokio = { version = "1", features = ["process", "io-util", "time", "macros"] }
portable-pty = "0.8"

